@@ -624,24 +624,6 @@ name|server
 operator|.
 name|blockmanagement
 operator|.
-name|BlockInfo
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|hadoop
-operator|.
-name|hdfs
-operator|.
-name|server
-operator|.
-name|blockmanagement
-operator|.
 name|BlockManager
 import|;
 end_import
@@ -4892,6 +4874,22 @@ operator|.
 name|clear
 argument_list|()
 expr_stmt|;
+name|CachedBlocksList
+name|cachedList
+init|=
+name|datanode
+operator|.
+name|getCached
+argument_list|()
+decl_stmt|;
+name|CachedBlocksList
+name|pendingCachedList
+init|=
+name|datanode
+operator|.
+name|getPendingCached
+argument_list|()
+decl_stmt|;
 for|for
 control|(
 name|Iterator
@@ -4912,118 +4910,21 @@ argument_list|()
 condition|;
 control|)
 block|{
-name|Block
-name|block
+name|long
+name|blockId
 init|=
-operator|new
-name|Block
-argument_list|(
 name|iter
 operator|.
 name|next
 argument_list|()
-argument_list|)
 decl_stmt|;
-name|BlockInfo
-name|blockInfo
-init|=
-name|blockManager
-operator|.
-name|getStoredBlock
-argument_list|(
-name|block
-argument_list|)
-decl_stmt|;
-if|if
-condition|(
-operator|!
-name|blockInfo
-operator|.
-name|isComplete
-argument_list|()
-condition|)
-block|{
-name|LOG
-operator|.
-name|warn
-argument_list|(
-literal|"Ignoring block id "
-operator|+
-name|block
-operator|.
-name|getBlockId
-argument_list|()
-operator|+
-literal|", because "
-operator|+
-literal|"it is in not complete yet.  It is in state "
-operator|+
-name|blockInfo
-operator|.
-name|getBlockUCState
-argument_list|()
-argument_list|)
-expr_stmt|;
-continue|continue;
-block|}
-name|Collection
-argument_list|<
-name|DatanodeDescriptor
-argument_list|>
-name|corruptReplicas
-init|=
-name|blockManager
-operator|.
-name|getCorruptReplicas
-argument_list|(
-name|blockInfo
-argument_list|)
-decl_stmt|;
-if|if
-condition|(
-operator|(
-name|corruptReplicas
-operator|!=
-literal|null
-operator|)
-operator|&&
-name|corruptReplicas
-operator|.
-name|contains
-argument_list|(
-name|datanode
-argument_list|)
-condition|)
-block|{
-comment|// The NameNode will eventually remove or update the corrupt block.
-comment|// Until then, we pretend that it isn't cached.
-name|LOG
-operator|.
-name|warn
-argument_list|(
-literal|"Ignoring cached replica on "
-operator|+
-name|datanode
-operator|+
-literal|" of "
-operator|+
-name|block
-operator|+
-literal|" because it is corrupt."
-argument_list|)
-expr_stmt|;
-continue|continue;
-block|}
 name|CachedBlock
 name|cachedBlock
 init|=
 operator|new
 name|CachedBlock
 argument_list|(
-name|block
-operator|.
-name|getBlockId
-argument_list|()
+name|blockId
 argument_list|,
 operator|(
 name|short
@@ -5043,8 +4944,8 @@ argument_list|(
 name|cachedBlock
 argument_list|)
 decl_stmt|;
-comment|// Use the existing CachedBlock if it's present; otherwise,
-comment|// insert a new one.
+comment|// Add the block ID from the cache report to the cachedBlocks map
+comment|// if it's not already there.
 if|if
 condition|(
 name|prevCachedBlock
@@ -5067,6 +4968,9 @@ name|cachedBlock
 argument_list|)
 expr_stmt|;
 block|}
+comment|// Add the block to the datanode's implicit cached block list
+comment|// if it's not already there.  Similarly, remove it from the pending
+comment|// cached block list if it exists there.
 if|if
 condition|(
 operator|!
@@ -5074,17 +4978,11 @@ name|cachedBlock
 operator|.
 name|isPresent
 argument_list|(
-name|datanode
-operator|.
-name|getCached
-argument_list|()
+name|cachedList
 argument_list|)
 condition|)
 block|{
-name|datanode
-operator|.
-name|getCached
-argument_list|()
+name|cachedList
 operator|.
 name|add
 argument_list|(
@@ -5098,17 +4996,11 @@ name|cachedBlock
 operator|.
 name|isPresent
 argument_list|(
-name|datanode
-operator|.
-name|getPendingCached
-argument_list|()
+name|pendingCachedList
 argument_list|)
 condition|)
 block|{
-name|datanode
-operator|.
-name|getPendingCached
-argument_list|()
+name|pendingCachedList
 operator|.
 name|remove
 argument_list|(
