@@ -740,6 +740,24 @@ name|hdfs
 operator|.
 name|server
 operator|.
+name|datanode
+operator|.
+name|DataNode
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hdfs
+operator|.
+name|server
+operator|.
 name|protocol
 operator|.
 name|NamenodeProtocols
@@ -5093,6 +5111,8 @@ argument_list|,
 literal|60000
 argument_list|)
 expr_stmt|;
+comment|// Send a cache report referring to a bogus block.  It is important that
+comment|// the NameNode be robust against this.
 name|NamenodeProtocols
 name|nnRpc
 init|=
@@ -5101,6 +5121,66 @@ operator|.
 name|getRpcServer
 argument_list|()
 decl_stmt|;
+name|DataNode
+name|dn0
+init|=
+name|cluster
+operator|.
+name|getDataNodes
+argument_list|()
+operator|.
+name|get
+argument_list|(
+literal|0
+argument_list|)
+decl_stmt|;
+name|String
+name|bpid
+init|=
+name|cluster
+operator|.
+name|getNamesystem
+argument_list|()
+operator|.
+name|getBlockPoolId
+argument_list|()
+decl_stmt|;
+name|LinkedList
+argument_list|<
+name|Long
+argument_list|>
+name|bogusBlockIds
+init|=
+operator|new
+name|LinkedList
+argument_list|<
+name|Long
+argument_list|>
+argument_list|()
+decl_stmt|;
+name|bogusBlockIds
+operator|.
+name|add
+argument_list|(
+literal|999999L
+argument_list|)
+expr_stmt|;
+name|nnRpc
+operator|.
+name|cacheReport
+argument_list|(
+name|dn0
+operator|.
+name|getDNRegistrationForBP
+argument_list|(
+name|bpid
+argument_list|)
+argument_list|,
+name|bpid
+argument_list|,
+name|bogusBlockIds
+argument_list|)
+expr_stmt|;
 name|Path
 name|rootDir
 init|=
